# zero2prod

./: Cargo.toml  README.md  configuration.yaml
.cargo/: config.toml
migrations/: 20221201062737_create_subscriptions_table.sql  20221207184604_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: test_health_check.rs
