[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["Jared Scott-Ransom <james.scottran@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"